Bug 1605223. Handle SVG_FECOMPONENTTRANSFER_TYPE_UNKNOWN when computing webrender filter information for component transfer filters. r=mstange

In SVGComponentTransferFunctionElement::ComputeAttributes type will be 0 == SVG_FECOMPONENTTRANSFER_TYPE_UNKNOWN if a func type is not specified.

SVG_FECOMPONENTTRANSFER_TYPE_IDENTITY is specified as the default value at

https://searchfox.org/mozilla-central/rev/cfd1cc461f1efe0d66c2fdc17c024a203d5a2fd8/dom/svg/SVGFilters.cpp#183

So one would think we would get SVG_FECOMPONENTTRANSFER_TYPE_IDENTITY for unknown func types, but I don't understand that code too well.

Differential Revision: https://phabricator.services.mozilla.com/D60609

--HG--
extra : moz-landing-system : lando